# redwood-mapping

./: .gitignore  CMakeLists.txt  build.ps1  build.sh  compile_flags.txt
Tests/: CMakeLists.txt  hello_test.cpp
app/: CMakeLists.txt  Main copy.cpp  Main.cpp  Statistics.hpp
app_cuda/: CMakeLists.txt  CudaUtils.cuh  Kernels.cuh  Main.cpp  Main.cu  RadixTree.cuh  Usm.cu  Usm.hpp
bench_cpu/: CMakeLists.txt  Morton.hpp  benchmark.cpp  brt.hpp
bench_cuda/: CMakeLists.txt  Main.cu  sync.hpp
bench_gpu/: CMakeLists.txt  benchmark.cu  brt.cuh  cpu_timer.hpp  cuda_utils.cuh  main.cu  morton.cuh  oct.cuh  tmp.cu
benchmarks/: BenchMorton.cpp  BenchOctree.cpp  BenchRadixTree.cpp  CMakeLists.txt
icp/: CMakeLists.txt  Main.cpp  PointCloud.cpp  PointCloud.hpp  SimpleICP.cpp  SimpleICP.hpp
include/: Common.hpp  Intrinsics.hpp  Morton.hpp  Utils.hpp
include/brt/: Math.hpp  Node.hpp  RadixTree.hpp
include/octree/: EdgeCount.hpp  Node.hpp  Octree.hpp
src/: CMakeLists.txt
tmp/: CMakeLists.txt  Main.cu  main.cu  morton.cuh  oct.cuh  sync.hpp
tmp2/: main.cu
